# uv-dependabot-wtf

./: pyproject.toml  requirements.txt
.github/: dependabot.yml
hcm_app/: README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
hcm_app/public/: site.webmanifest
hcm_app/src/: App.tsx  Router.tsx  main.tsx  types.d.ts
hcm_app/src/api/: admin.service.ts  attendance.service.ts  benefits.service.ts  company.service.ts  index.ts  onboarding.service.ts  payroll.service.ts  profiles.service.ts  search.service.tsx  unauthenticated.service.ts
hcm_app/src/components/admin/: AdminHandbookAssignModal.tsx  AdminHandbookProgressBar.tsx  CustomFieldForm.tsx  DropdownOptionsField.tsx  FieldList.tsx  FormPreview.tsx  UserPasswordResetTab.tsx  UserPermissionCard.tsx  UserSearchInput.tsx  userAccessFormValues.ts
hcm_app/src/components/benefits/: AnthemComplianceBanner.tsx  BenefitConfirmationPdfDocument.tsx  BenefitSummary.tsx  CignaComplianceBanner.tsx  OpenEnrollmentNotification.tsx  SpendingAccountSection.tsx  SpendingAccountSummary.tsx  markdownParser.tsx  thrivepassFormData.ts
hcm_app/src/components/bulk-import/: ResultsStep.tsx  ReviewStep.tsx
hcm_app/src/components/common/: CustomField.tsx  DonutChart.tsx  ErrorBoundary.tsx  ErrorScreen.tsx  ImageEditorUpload.tsx  InactivityPrompt.tsx  PdfPreviewCard.tsx  PdfReader.tsx  ProxyBlockModal.tsx  RichEditor.tsx  RouterPrompt.tsx  SectionNavigation.tsx
hcm_app/src/components/company/: Calendar.tsx  LogoUpload.tsx  NextAnniversaryCard.tsx  NextBirthdayCard.tsx  NextPtoCard.tsx  OrgChart.css  OrgChart.tsx  SubscribeToCalendar.tsx
hcm_app/src/components/dashboard/: AttendanceCard.tsx  BenefitsCard.tsx  BenefitsEnrollmentCard.tsx  CalendarCard.tsx  ElectionCard.tsx  HandbookSignModal.tsx  LaborNoticeCard.tsx  MFACard.tsx  OpenEnrollmentCard.tsx  OutageCard.tsx  PayHistoryCard.tsx  ProductNotificationsBanner.tsx  TeamCard.tsx  (+4 more)
hcm_app/src/contexts/: api.context.tsx  auth.context.tsx  company.context.tsx  proxy.context.tsx  roleValidation.context.tsx  user.context.tsx
hcm_app/src/hooks/: useApi.ts  useApiData.ts  useBulkImportState.ts  useCookieFlag.ts  useFetchHolidays.ts  useNav.ts  usePrehireImport.ts  useRedirectToDashboard.ts  useRoleValidation.ts  useRouterPrompt.tsx  useScrollToSection.tsx  useUser.ts
hcm_app/src/pages/: PrismLogoutPage.tsx  PrismPage.tsx
hcm_app/src/utils/: anniversary.ts  benefits.ts  companyConfig.ts  constants.ts  date.ts  feature-flags.ts  files.ts  handbooks.ts  importUtils.ts  navItems.ts  paths.ts  payroll.ts  pdf.tsx  profile.ts  proxy.ts  roles.ts  scroll.ts  user.ts
hcm_app/tests/contexts/: roleValidation.test.tsx  user.context.test.tsx
hcm_app/tests/fixtures/: index.ts
hcm_app/tests/hooks/: useRoleValidation.test.tsx
hcm_app/tests/pages/: DashboardPage.test.tsx  ProfilePage.test.tsx
hcm_app/tests/utils/: benefits.test.ts  navItems.test.ts  profile.test.ts
uv_dependabot_wtf/: __init__.py
(+147 files in other folders)
